test/types/scalar/bradc/assignUintNegative.good
assignUintNegative.chpl:3: error: type mismatch in assignment from int(64) to uint(64)
